# asm-rs

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/asm-rs/: Cargo.toml
crates/asm-rs-macros/: Cargo.toml  README.md
crates/asm-rs-macros/examples/: compile_time_asm.rs
crates/asm-rs-macros/src/: lib.rs
crates/asm-rs-macros/tests/: compile_tests.rs
crates/asm-rs/benches/: throughput.rs
crates/asm-rs/examples/: basic.rs  multi_arch.rs  preprocessor.rs  riscv.rs  shellcode.rs
crates/asm-rs/src/: aarch64.rs  arm.rs  assembler.rs  encoder.rs  error.rs  ir.rs  lexer.rs  lib.rs  linker.rs  optimize.rs  parser.rs  preprocessor.rs  riscv.rs  x86.rs
crates/asm-rs/tests/: cross_validate.rs  cross_validate_multi_arch.rs  integration.rs  proptest.proptest-regressions  proptest.rs  regression.rs  serde.rs  wasm_integration.rs  x86.rs  x86_64.rs  x86_64_avx.rs
docs/: _config.yml  api-reference.md  architecture.md  configuration.md  getting-started.md  index.md
docs/reference/: aarch64.md  arm32.md  index.md  riscv.md  thumb.md  x86_64.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aarch64.rs  fuzz_arm.rs  fuzz_riscv.rs  fuzz_x86_64.rs
scripts/: check.sh
